<resources>
    <string name="app_name">AppLearn</string>
    <string name="tile_1">Tile 1</string>
    <string name="tile_2">Tile 2</string>
    <string name="tile_3">Tile 3</string>
    <string name="tile_4">Tile 4</string>
    <string name="enter_name">Введить назву</string>
    <string name="create">Створити</string>
    <string name="select">Оберить</string>
    <string name="enter_word">Введіть слово</string>
    <string name="enter_translation">Введіть переклад</string>
    <string name="add">Додати</string>
    <string name="englich">Englisch</string>
    <string name="deutsch">Deutsch</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="russian">russian</string>
    <string name="name">Переклад</string>
    <string name="word_out_oder">Слова не попорядку</string>
    <string name="help">Допомога</string>
    <string name="check">Перевірити</string>
    <string name="word">Слово</string>
    <string name="sprechen_select">Оберіть мову мовлення</string>
    <string name="select_part">Оберіть розділ</string>

</resources>