<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/randomOrderSwitch"
        android:layout_width="365dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/word_out_oder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <EditText
        android:id="@+id/translateEditText"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/word"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomOrderSwitch" />

    <ImageButton
        android:id="@+id/imageSpeaker"
        android:layout_width="67dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/translateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/translateEditText"
        app:srcCompat="@drawable/icons_speaker" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translateEditText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="367dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/translateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomOrderSwitch"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/buttonHelp"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>